<resources>
    <string name="app_name">TV Maze Api Client</string>
    <string name="hint_search_show">Type a show name</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="mainDescriptionText" formatted="false">Status: %1s\nRating: %.1f\nLatest episode: %2s\nNext Episode: %3s</string>
    <plurals name="nextEpisodeInDays">
        <item quantity="one">Next episode in %d day</item>
        <item quantity="other">Next episode in %d days</item>
    </plurals>
    <string name="searchDescriptionText" formatted="false">Premiered: %s\nType: %2s\nStatus: %3s\nRating: %.1f</string>
    <string name="searchGenresText" formatted="false">Genres: %s</string>
    <string name="tv_show_image">TV show image</string>
    <string name="transition_image">tvShowImage</string>
    <string name="summary">Summary:</string>
    <string name="details_text">Premiered:\nType:\nStatus:\nRating:</string>
    <string name="detailsDescriptionText" formatted="false">%s\n%2s\n%3s\n%.1f</string>
    <string name="latest_next_episode">Latest episode:\nNext episode:</string>
    <string name="episodes_numbers" formatted="false">%s\n%s</string>
    <string name="error_while_searching">Error occurred while searching</string>
    <string name="main_list_empty">The list is empty. Tap on menu, search for some TV show and save it.</string>
    <string name="search_list_empty">List is empty. Tap on search and type TV show\'s name.</string>
    <string name="tv_show_not_found">TV show not found.</string>
    <string name="sort_by">Sort by</string>
    <string name="title">Title</string>
    <string name="premiered">Premiered</string>
    <string name="next_episode">Next Episode</string>
    <string name="search_for_tv_show">Search for TV Show</string>
    <string name="settings">Settings</string>
    <string name="notification_default">Default</string>
    <string name="notification_silent">Silent</string>
</resources>
